plugins {
    id 'java-library'
    id 'maven-publish'
    id 'idea'
    id 'net.neoforged.moddev' version '2.0.141'
}

tasks.named('wrapper', Wrapper).configure {
    // Define wrapper values here so as to not have to always do so when updating gradlew.properties.
    // Switching this to Wrapper.DistributionType.ALL will download the full gradle sources that comes with
    // documentation attached on cursor hover of gradle classes and methods. However, this comes with increased
    // file size for Gradle. If you do switch this to ALL, run the Gradle wrapper task twice afterwards.
    // (Verify by checking gradle/wrapper/gradle-wrapper.properties to see if distributionUrl now points to `-all`)
    distributionType = Wrapper.DistributionType.BIN
}

version = mod_version
group = mod_group_id

def archiveModName = mod_name.replaceAll(/[\\/:*?"<>|]/, '-')
def buildArchiveName = "${archiveModName}-${mod_version}-neoforge-${minecraft_version}"

sourceSets.main.resources {
    // Include resources generated by data generators.
    srcDir('src/generated/resources')

    // Exclude common development only resources from finalized outputs
    exclude("**/*.bbmodel") // BlockBench project files
    exclude("src/generated/**/.cache") // datagen cache files
    exclude("assets/simukraft/building/**/*.sk") // Building files are shipped only as official_building.zip
    exclude("assets/simukraft/building/**/*.nbt")
    exclude("assets/simukraft/building/**/*.json")
    exclude("assets/simukraft/building/**/_files.txt")
}

repositories {
    mavenCentral()
    maven {
        url = "https://maven.firstdark.dev/snapshots"
    }
    maven {
        url = "https://maven.neoforged.net/releases"
    }
    maven {
        url = "https://maven.shedaniel.me/"
    }
    maven {
        url = "https://jitpack.io/"
    }
    maven {
        url = "https://cursemaven.com"
        content {
            includeGroup "curse.maven"
        }
    }
}

base {
    archivesName = buildArchiveName
}

def ntJar = file('E:/Project/NT/build/libs/nt-1.0.1.jar')

// 非正式版构建前校验 NT JiJ 文件存在性，缺失则立即终止构建
// 正式版（-Prelease）跳过此校验，JiJ 不打入产物
tasks.register('validateJijFiles') {
    description = '校验 JiJ 依赖文件存在性（仅非正式版）'
    def isRelease = rootProject.hasProperty('release') // 配置时捕获，避免配置缓存冲突
    onlyIf { !isRelease }
    doFirst {
        if (!ntJar.exists()) {
            return
            throw new GradleException(
                "\n❌ JiJ 依赖缺失，非正式版构建终止！\n" +
                "   文件: ${ntJar.absolutePath}\n" +
                "   请先构建 NT 保护层项目（执行其 build 任务）后重试。"
            )
        }
    }
}

// jar 与 jarJar 均强制依赖校验，不可绕过
tasks.named('jar').configure { dependsOn 'validateJijFiles' }
tasks.whenTaskAdded { task ->
    if (task.name == 'jarJar') {
        task.dependsOn 'validateJijFiles'
    }
}

// 构建时写入 build.type 标记，运行时据此判断是否为内测版
// beta = 非正式版（默认），release = -Prelease 构建
tasks.register('generateBuildMarker', WriteProperties) {
    description = '生成构建类型标记文件（供运行时完整性校验使用）'
    def buildType = rootProject.hasProperty('release') ? 'release' : 'beta' // 配置时求值
    destinationFile = layout.buildDirectory.file('generated/buildMarker/META-INF/simukraft-build.properties')
    property('build.type', buildType)
}
sourceSets.main.resources.srcDir(layout.buildDirectory.dir('generated/buildMarker'))
tasks.named('processResources').configure { dependsOn 'generateBuildMarker' }

tasks.withType(AbstractArchiveTask).configureEach {
    archiveVersion = ''
}

// Mojang ships Java 21 to end users in 1.21.1, so mods should target Java 21.
java.toolchain.languageVersion = JavaLanguageVersion.of(21)

neoForge {
    // Specify the version of NeoForge to use.
    version = project.neo_version

    parchment {
        mappingsVersion = project.parchment_mappings_version
        minecraftVersion = project.parchment_minecraft_version
    }

    // This line is optional. Access Transformers are automatically detected
    // accessTransformers = project.files('src/main/resources/META-INF/accesstransformer.cfg')

    // Default run configurations.
    // These can be tweaked, removed, or duplicated as needed.
    runs {
        client {
            client()

            jvmArguments.addAll("-Xmx4G", "-Xms1G")
            // Comma-separated list of namespaces to load gametests from. Empty = all namespaces.
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        server {
            server()
            programArgument '--nogui'
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        // This run config launches GameTestServer and runs all registered gametests, then exits.
        // By default, the server will crash when no gametests are provided.
        // The gametest system is also enabled by default for other run configs under the /test command.
        gameTestServer {
            type = "gameTestServer"
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        data {
            data()

            // example of overriding the workingDirectory set in configureEach above, uncomment if you want to use it
            // gameDirectory = project.file('run-data')

            // Specify the modid for data generation, where to output the resulting resource, and where to look for existing resources.
            programArguments.addAll '--mod', project.mod_id, '--all', '--output', file('src/generated/resources/').getAbsolutePath(), '--existing', file('src/main/resources/').getAbsolutePath()
        }

        // applies to all the run configs above
        configureEach {
            // Recommended logging data for a userdev environment
            // The markers can be added/remove as needed separated by commas.
            // "SCAN": For mods scan.
            // "REGISTRIES": For firing of registry events.
            // "REGISTRYDUMP": For getting the contents of all registries.
            systemProperty 'forge.logging.markers', 'REGISTRIES'

            // Recommended logging level for the console
            // You can set various levels here.
            // Please read: https://stackoverflow.com/questions/2031163/when-to-use-the-different-log-levels
            logLevel = org.slf4j.event.Level.DEBUG
        }
    }

    mods {
        // define mod <-> source bindings
        // these are used to tell the game which sources are for which mod
        // multi mod projects should define one per mod
        "${mod_id}" {
            sourceSet(sourceSets.main)
        }
    }

    // Bootstraps a real NeoForge environment for JUnit unit tests so they can exercise the
    // pathfinder against actual Minecraft data classes (BlockPos, Vec3, ...). The pathfinder runs
    // purely on an immutable snapshot, so these tests need no live world.
    unitTest {
        enable()
        testedMod = mods.named(mod_id)
    }
}

// Sets up a dependency configuration called 'localRuntime'.
// This configuration should be used instead of 'runtimeOnly' to declare
// a dependency that will be present for runtime testing but that is
// "optional", meaning it will not be pulled by dependents of this mod.
configurations {
    runtimeClasspath.extendsFrom localRuntime
    additionalRuntimeClasspath.extendsFrom localRuntime
}

dependencies {
    // NT 保护层：内测版通过 JiJ 嵌入，正式版构建时用 -Prelease 剔除
//    if (!rootProject.hasProperty('release')) {
//        implementation files(ntJar)
//        jarJar files(ntJar)
//    }

    implementation "curse.maven:ldlib-626676:8152699"
    implementation "dev.vfyjxf:taffy:1.1.4"
    compileOnly "org.appliedenergistics.yoga:yoga:1.0.0"
    implementation "org.xerial:sqlite-jdbc:3.46.1.0"
    implementation "com.zaxxer:HikariCP:5.1.0"
    jarJar "com.zaxxer:HikariCP:5.1.0"
    implementation "curse.maven:sodium-394468:6382651"
    implementation "curse.maven:irisshaders-455508:6661598"
    compileOnly "curse.maven:xaeros-world-map-317780:8042208"
    localRuntime "org.xerial:sqlite-jdbc:3.46.1.0"
    implementation "curse.maven:spark-361579:6225208"
    jarJar "org.xerial:sqlite-jdbc:3.46.1.0"

    // Unit testing: JUnit 5 platform used by the moddev unit test bootstrap.
    testImplementation platform("org.junit:junit-bom:5.10.2")
    testImplementation "org.junit.jupiter:junit-jupiter"
    testRuntimeOnly "org.junit.platform:junit-platform-launcher"

    // Example optional mod dependency with JEI
    // The JEI API is declared for compile time use, while the full JEI artifact is used at runtime
    // compileOnly "mezz.jei:jei-${mc_version}-common-api:${jei_version}"
    // compileOnly "mezz.jei:jei-${mc_version}-neoforge-api:${jei_version}"
    // We add the full version to localRuntime, not runtimeOnly, so that we do not publish a dependency on it
    // localRuntime "mezz.jei:jei-${mc_version}-neoforge:${jei_version}"

    // Example mod dependency using a mod jar from ./libs with a flat dir repository
    // This maps to ./libs/coolmod-${mc_version}-${coolmod_version}.jar
    // The group id is ignored when searching -- in this case, it is "blank"
    // implementation "blank:coolmod-${mc_version}:${coolmod_version}"

    // Example mod dependency using a file as dependency
    // implementation files("libs/coolmod-${mc_version}-${coolmod_version}.jar")

    // Example project dependency using a sister or child project:
    // implementation project(":myproject")

    // For more info:
    // http://www.gradle.org/docs/current/userguide/artifact_dependencies_tutorial.html
    // http://www.gradle.org/docs/current/userguide/dependency_management.html
}

// This block of code expands all declared replace properties in the specified resource targets.
// A missing property will result in an error. Properties are expanded using ${} Groovy notation.
var generateModMetadata = tasks.register("generateModMetadata", ProcessResources) {
    var replaceProperties = [
            minecraft_version      : minecraft_version,
            minecraft_version_range: minecraft_version_range,
            neo_version            : neo_version,
            loader_version_range   : loader_version_range,
            mod_id                 : mod_id,
            mod_name               : mod_name,
            mod_license            : mod_license,
            mod_version            : mod_version,
    ]
    inputs.properties replaceProperties
    expand replaceProperties
    from "src/main/templates"
    into "build/generated/sources/modMetadata"
}
// Include the output of "generateModMetadata" as an input directory for the build
// this works with both building through Gradle and the IDE.
sourceSets.main.resources.srcDir generateModMetadata
// To avoid having to run "generateModMetadata" manually, make it run on every project reload
neoForge.ideSyncTask generateModMetadata

// Example configuration to allow publishing using the maven-publish plugin
publishing {
    publications {
        register('mavenJava', MavenPublication) {
            from components.java
        }
    }
    repositories {
        maven {
            url "file://${project.projectDir}/repo"
        }
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8' // Use the UTF-8 charset for Java compilation
}

tasks.named('test', Test) {
    useJUnitPlatform()
}

// IDEA no longer automatically downloads sources/javadoc jars for dependencies, so we need to explicitly enable the behavior.
idea {
    module {
        downloadSources = true
        downloadJavadoc = true
    }
}
